Fix for mobile Safari cutting off footer

--- a/wp-content/themes/ddbz/style.css
+++ b/wp-content/themes/ddbz/style.css
@@ -30,6 +30,11 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
   --border: 2px dashed #0098FB;
 }
 
+html, body {
+  height: 100%;
+  overflow-y: scroll;
+}
+
 html {
 	line-height: 1.15; /* 1 */
 	-webkit-text-size-adjust: 100%; /* 2 */
